--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
   push:
   pull_request:
 
+
+permissions:
+  contents: write
+
 jobs:
   test_and_analysis:
     runs-on: ubuntu-latest
@@ -27,11 +31,17 @@ jobs:
       - name: Static analysis (SpotBugs)
         run: mvn -B com.github.spotbugs:spotbugs-maven-plugin:4.8.6.6:spotbugs
 
+  secrets_scan:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+
       - name: Secret scan (gitleaks)
         uses: gitleaks/gitleaks-action@v2
 
   release:
-    needs: test_and_analysis
+    needs: [test_and_analysis, secrets_scan]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
 
@@ -55,7 +65,9 @@ jobs:
           files: target/*.jar
 
   docs:
+
     if: github.ref == 'refs/heads/master'
+    needs: [test_and_analysis, secrets_scan]
     runs-on: ubuntu-latest
 
     steps:
@@ -72,7 +84,4 @@ jobs:
         run: mvn -B -DskipTests javadoc:javadoc
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: target/site/apidocs
+        uses: peaceiris/actions-g
