--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
   push:
   pull_request:
 
-
 permissions:
   contents: write
 
@@ -36,7 +35,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-
       - name: Secret scan (gitleaks)
         uses: gitleaks/gitleaks-action@v2
 
@@ -65,7 +63,6 @@ jobs:
           files: target/*.jar
 
   docs:
-
     if: github.ref == 'refs/heads/master'
     needs: [test_and_analysis, secrets_scan]
     runs-on: ubuntu-latest
@@ -84,4 +81,7 @@ jobs:
         run: mvn -B -DskipTests javadoc:javadoc
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-g
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: target/site/apidocs
